--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .game {
     width: 400px;
     height: 300px;
-    background-color: blue;
+    background-color: gray;
     margin: 100px auto auto auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
 }
@@ -21,4 +21,21 @@ button {
     height: 50px;
     background-color: red;
 
+}
+.score{
+
+}
+#playerScore {
+    background-color: white;
+    grid-row: 3;
+    grid-column: 1;
+}
+#compScore{
+    background-color: white;
+    grid-row: 3;
+    grid-column: 3;
+}
+.results{
+    background-color: white;
+    grid-area: 4 / 2 / 4 / 3;
 }
