--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .game {
-    width: 400px;
+    min-width: 300px;
+    max-width: 600px;
     height: 300px;
     background-color: gray;
     margin: 100px auto auto auto;
