--- a/style.css
+++ b/style.css
@@ -86,5 +86,13 @@ button {
     grid-column-end: 4;
     grid-row: 4;
     justify-self: center;
-    
+}
+.history{
+    width: 300px;
+    text-align: center;
+    margin: auto;
+}
+li.rounds{
+    list-style: none inline;
+    text-align: center;
 }
